@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.13 2001/12/28 07:25:11 psavola Exp $
+$Id: CHANGES,v 1.14 2001/12/28 07:38:44 psavola Exp $
+
+12/28/2001	Small cleanups.  AdvSendAdvert is implicitly off by
+		default.  By Marko Myllynen.
 
 12/21/2001	Check via sysctl that IPv6 forwarding is enabled;
 		exit unless debugging is enabled.  Triggered by
